Refactor: Enhance auth controller comments and config
- Improve code readability and maintainability in authController.js by adding JSDoc comments and refining inline comments.
- Make bcrypt salt rounds configurable via environment variable in .env.example and authController.js.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,4 +11,7 @@ DB_REJECT_UNAUTHORIZED=false # For SSL connections, set to false if using self-s
 JWT_SECRET=yourSuperStrongAndRandomJwtSecretKey!
 JWT_EXPIRES_IN=1h
 
+BCRYPT_SALT_ROUNDS=10
+
+
 CORS_ORIGIN=http://localhost:3000 # Frontend URL for CORS
