--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:check": "eslint . --max-warnings 0"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +26,20 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^28.12.0",
+    "globals": "^16.2.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
     "nodemon": "^3.1.10",
+    "prettier": "^3.3.2",
     "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.1"
+  },
+  "lint-staged": {
+    "**/*.{js,json,md,html,css,scss,yaml,yml}": "prettier --write",
+    "**/*.js": "eslint --fix"
   }
 }
