Refactor: Centralize frontend test infrastructure and reorganize test files
- Reorganize tests from component-specific __tests__ folders to centralized src/__tests__/ structure
- Create comprehensive test utilities in helpers/ directory:
  * test-utils.jsx: Rendering helpers, mock factories, assertion utilities
  * mock-providers.jsx: Context provider mocks and scenario builders
  * api-mocks.jsx: API response mocks and service mock setup
- Update Jest configuration with improved coverage settings and module mapping
- Add ESLint rules for Jest and context files with appropriate exceptions
- Add granular test scripts in package.json for unit, integration, and component testing
- Migrate existing test files to new structure while preserving test coverage
- Remove old test files from component directories to eliminate duplication

This refactoring establishes a scalable test architecture following industry standards
for PERN stack applications, with clear separation between unit and integration tests,
centralized mock utilities, and improved maintainability through DRY principles.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest src/__tests__/unit",
+    "test:integration": "jest src/__tests__/integration",
+    "test:components": "jest src/__tests__/unit/components",
+    "test:services": "jest src/__tests__/unit/services",
+    "test:context": "jest src/__tests__/unit/context",
+    "test:auth": "jest src/__tests__/integration/auth-flow",
+    "test:projects": "jest src/__tests__/integration/project-management",
+    "test:errors": "jest src/__tests__/integration/error-handling",
+    "test:ci": "jest --coverage --watchAll=false --passWithNoTests",
     "prepare": "husky",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
