--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,17 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest src/__tests__/unit",
+    "test:integration": "jest src/__tests__/integration",
+    "test:components": "jest src/__tests__/unit/components",
+    "test:services": "jest src/__tests__/unit/services",
+    "test:context": "jest src/__tests__/unit/context",
+    "test:auth": "jest src/__tests__/integration/auth-flow",
+    "test:projects": "jest src/__tests__/integration/project-management",
+    "test:errors": "jest src/__tests__/integration/error-handling",
+    "test:ci": "jest --coverage --watchAll=false --passWithNoTests",
     "prepare": "husky",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -16,6 +27,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
