Chore: Configure JSConfig for improved path resolution
Updates the `jsconfig.json` to enhance the developer experience in VSCode.

- Sets `baseUrl` to `./src` and adjusts the `paths` alias accordingly.
- Adds `"jsx": "react-jsx"` for modern JSX transform support.
- Specifies `"include": ["src"]` to scope the project context correctly.

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,8 +1,13 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    // "checkJs": true,
+
+    "jsx": "react-jsx",
+
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["*"]
     }
-  }
+  },
+  "include": ["src"]
 }
